--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "4.20.0",
     "@ionic-native/email-composer": "^5.28.0",
     "@ionic-native/local-notifications": "^5.28.0",
+    "@ionic-native/social-sharing": "^5.28.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
@@ -44,7 +45,9 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^6.0.2",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
+    "es6-promise-plugin": "^4.2.2",
     "typescript": "2.6.2"
   },
   "description": "An Ionic project",
@@ -60,7 +63,11 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-compat": {},
       "de.appplant.cordova.plugin.local-notification": {},
-      "cordova-plugin-email": {}
+      "cordova-plugin-email": {},
+      "cordova-plugin-x-socialsharing": {
+        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
+      }
     },
     "platforms": [
       "android",
