--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^5.28.0",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/email-composer": "^5.28.0",
     "@ionic-native/local-notifications": "^5.28.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
+    "cordova-plugin-camera": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email": "^1.2.7",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -67,6 +69,9 @@
       "cordova-plugin-x-socialsharing": {
         "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
+      },
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
       }
     },
     "platforms": [
