--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "4.20.0",
     "@ionic-native/email-composer": "^5.28.0",
     "@ionic-native/local-notifications": "^5.28.0",
+    "@ionic-native/network": "^5.28.0",
     "@ionic-native/social-sharing": "^5.28.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
@@ -44,6 +45,7 @@
     "cordova-plugin-email": "^1.2.7",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -72,7 +74,8 @@
       },
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android",
